# evaluation_project1

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp  server.cpp
example/: example.ini
include/: ini.hpp
src/: ini.cpp
